<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    tools:context=".RegisterActivity"
    tools:layout_editor_absoluteY="25dp">


    <EditText
        android:id="@+id/username_edit_reg"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/username_reg"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        app:layout_constraintBottom_toTopOf="@+id/email_edit_reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_edit_reg"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/email_reg"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="@+id/username_edit_reg"
        app:layout_constraintStart_toStartOf="@+id/username_edit_reg"
        app:layout_constraintTop_toBottomOf="@+id/username_edit_reg" />

    <EditText
        android:id="@+id/password_edit_reg"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/password_reg"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        app:layout_constraintEnd_toEndOf="@+id/email_edit_reg"
        app:layout_constraintStart_toStartOf="@+id/email_edit_reg"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_reg" />

    <Button
        android:id="@+id/register_button_reg"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="#e2e2e2"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/password_edit_reg"
        app:layout_constraintStart_toStartOf="@+id/password_edit_reg"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_reg" />

    <TextView
        android:id="@+id/already_textview"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/already_have_an_account"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/register_button_reg"
        app:layout_constraintStart_toStartOf="@+id/register_button_reg"
        app:layout_constraintTop_toBottomOf="@+id/register_button_reg" />

</android.support.constraint.ConstraintLayout>