<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark">

    <TextView
        android:id="@+id/goback_textview"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/go_back"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/login_button_login"
        app:layout_constraintStart_toStartOf="@+id/login_button_login"
        app:layout_constraintTop_toBottomOf="@+id/login_button_login" />

    <EditText
        android:id="@+id/email_edit_login"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/email_login"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_edit_login"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/password_login"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        app:layout_constraintEnd_toEndOf="@+id/email_edit_login"
        app:layout_constraintStart_toStartOf="@+id/email_edit_login"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_login" />

    <Button
        android:id="@+id/login_button_login"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="#e2e2e2"
        android:text="@string/log_in"
        app:layout_constraintEnd_toEndOf="@+id/password_edit_login"
        app:layout_constraintStart_toStartOf="@+id/password_edit_login"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_login" />
</android.support.constraint.ConstraintLayout>